--- a/src/style.css
+++ b/src/style.css
@@ -8,86 +8,89 @@
   
 /* background green color */
 .loginContainer {
-    position: relative;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #557126;  
-  }
-  
-  /* image centering */
-  .imageContainer {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: auto;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  position: relative;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #557126;  
+}
 
-  /* image size */
-  .imageContainer img {
-    max-width: calc(4 * 300px);
-    max-height: calc(4 * 300px);
-  }
+/* image centering */
+.imageContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: auto;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .logoContainer img {
-    max-width: 100px;
-    max-height: 100px;
-  }
-  
-  /* login white box */
+/* image size */
+.imageContainer img {
+  max-width: calc(4 * 300px);
+  max-height: calc(4 * 300px);
+}
+
+.logoContainer img {
+  max-width: 100px;
+  max-height: 100px;
+}
+
+/* login white box */
+.loginBox {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  max-width: 80%; 
+  width: 300px; 
+  z-index: 0;
+  border-top: 4px solid #557126;
+}
+
+@media (max-width: 768px) {
   .loginBox {
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    max-width: 80%; 
-    width: 300px; 
-    z-index: 0;
-    border-top: 4px solid #557126;
+    width: 100%; 
   }
-  
-  @media (max-width: 768px) {
-    .loginBox {
-      width: 100%; 
-    }
-  }
-  
-  .loginButton {
-    background-color: #557126; 
-    color: white; 
-    border: none; 
-    padding: 10px 20px; 
-    border-radius: 5px; 
-    cursor: pointer; 
-  }
+}
 
-  .inputField {
-    display: block; 
-    margin-bottom: 10px; /* space between fields */
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-  }
+.loginButton {
+  background-color: #557126; 
+  color: white; 
+  border: none; 
+  padding: 10px 20px; 
+  border-radius: 5px; 
+  cursor: pointer; 
+}
 
-  .googleButton {
-    background-color: white;
-    border-radius: 5px;
-    border: none;
-    margin-top: 10px;
-    align-items: center;
-    justify-content: center; /* to center horizontally */
-  }
-  
-  .googleLogo {
-    width: 13px;  
-    height: 13px;
-    margin-right: 10px;
-  }
-  
+.inputField {
+  display: block; 
+  margin-bottom: 10px; /* space between fields */
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.googleButton {
+  background-color: white;
+  border-radius: 5px;
+  border: none;
+  margin-top: 10px;
+  align-items: center;
+  justify-content: center; /* to center horizontally */
+}
+
+.googleLogo {
+  width: 13px;  
+  height: 13px;
+  margin-right: 10px;
+}
+
+.space{
+  padding-bottom: 10px;
+}
