Updates for Website
Updated:
- home page
- Sign up
- Api integrated (Recipe + food logging)
- Display the weight scale with calories
and more!

Co-Authored-By: jennyduartee <124544870+jennyduartee@users.noreply.github.com>

--- a/src/recipeResults.css
+++ b/src/recipeResults.css
@@ -72,3 +72,18 @@ body {
   .recipeDetails a:hover {
     background-color: #829365;
   }
+
+  .recipeDetails button {
+    text-align: center;
+    background-color: #557126;
+    color: white;
+    text-decoration: none;
+    padding: 5px;
+    border-radius: 5px;
+    margin-top: 10px;
+    border-color: #55712600;
+  }
+
+  .recipeDetails button:hover {
+    background-color: #829365;
+  } 
