--- a/src/homeTab.css
+++ b/src/homeTab.css
@@ -89,3 +89,34 @@
 .FoodLogHeader {
   color: white;
 }
+
+.MyScaleContainer {
+  color: white;
+}
+
+.scaleBox {
+  background-color: rgba(255, 255, 255, 0.496);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  max-width: 40%; 
+  border-top: 4px solid #557126;
+  margin: 0 auto;
+}
+
+.breakfastTable{
+  color: white;
+}
+
+table, th, td {
+  border: 2px solid white;
+  border-collapse: collapse;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+th, td {
+  background-color: #ffffff88;
+}
